--- a/js/dom.html
+++ b/js/dom.html
@@ -4,16 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hellow Js</title>
-    <link rel="stylesheet" href="style.css">
-
-    <style>
-        body{
-            background-color: antiquewhite;
-        }
-    </style>
+    <title>Document</title>
 </head>
 <body>
-    <h1>hellow javascript</h1>
+    <header>
+        <h1>Wellcone to our webside..</h1>
+    </header>
+    <main>
+        <section>
+            <article>
+                <h3></h3>
+            </article>
+        </section>
+    </main>
 </body>
 </html>
