--- a/js/dom.html
+++ b/js/dom.html
@@ -24,7 +24,8 @@
             const text = document.getElementById('new');
             text.innerText="new item added";
             text.style.marginTop = "20px";
-            text.style.color = "green"
+            text.style.color = "green"++
+            
             document.getElementById("click").innerText="why you click me";
         }
         
