--- a/js/dom2.html
+++ b/js/dom2.html
@@ -5,20 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        /* .blog{
+            border: 2px solid orange;
+            padding: 5px;
+            margin: 5px;
+            border-radius: 10px;
+        } */
+    </style>
 </head>
 <body>
     <header>
         <h1>Wellcone to my new webside...</h1>
     </header>
     <main>
-        <section>
+        <section class="blogs">
             <article class="blog">
                 <h3 id="first-title">My Awesome Blog-1</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi eum provident recusandae officia! Consectetur dicta iure, provident libero sequi accusantium doloremque deleniti aperiam voluptas deserunt dignissimos minus mollitia corrupti est?...</p>
             </article>
-            <article class="blog">
+            <article id='secound-blog' class="blog">
                 <h3 id="second-title">My Awesome Blog-1</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi eum provident recusandae officia! Consectetur dicta iure, provident libero sequi accusantium doloremque deleniti aperiam voluptas deserunt dignissimos minus mollitia corrupti est?...</p>
+                <p> golap Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi eum provident recusandae officia! Consectetur dicta iure, provident libero sequi accusantium doloremque deleniti aperiam voluptas deserunt dignissimos minus mollitia corrupti est?...</p>
             </article>
             <article class="blog">
                 <h3 id="third-title">My Awesome Blog-1</h3>
@@ -30,5 +38,34 @@
             </article>
         </section>
     </main>
+
+    <script>
+
+        // const secondTitle =document.getElementById('second-title');
+        // secondTitle.innerText='center';
+        // secondTitle.style.backgroundColor='salmon'
+
+        //document.getElementsByClassName('blog');
+
+
+        // explore getElementByClassName:
+
+        const blogs =document.getElementsByClassName('blog');
+        for(const blog of blogs){
+          blog.style.border='2px solid orange';
+          blog.style.borderRadius='10px';
+          blog.style.margin = '5px';
+        }
+        
+        // 1 getElementsTagName;
+        //document.getElementsByTagName('p');
+        // 2 getElementById;
+        // getElementById('secound-title')
+        //3 getElementByClassName('');
+        // 4 querySelectorAll('.class');
+        // 5 querySelectorAll('#id');
+        
+
+    </script>
 </body>
 </html>
