--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="stylesheet" href="style.css">
 
     <style>
-        body{
-            background-color: antiquewhite;
-        }
+       .pic{
+
+       }
     </style>
 </head>
 <body>
-    <h1>hellow javascript</h1>
+   
 </body>
 </html>
